bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: type mismatch;
 found   : Int(110)
 required: Boolean
  if ( 90< n <110) {
              ^NearHundred:5: error: type mismatch;
 found   : Int(210)
 required: Boolean
  if (190< n <210) {
              ^